--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
 			<div class="home sidebar">
 				<h3>Carmel Freeman</h3>
         		<a href="https://carmelfreeman.com">
-				<img src="/images/carmelheadshot.jpeg">
+				<img width="100%" src="/images/carmelheadshot.jpeg">
 				</a>
 			</div>
   
